--- a/Maui.html
+++ b/Maui.html
@@ -24,7 +24,7 @@
             <p>Dit is Maui. Maui is een Cyperse kater (streepjes kat).
                 Ik heb Maui vijf jaar geleden (2018) uit een nestje van een vriendin van mij gekregen.
                 Er waren nog maar een paar over en ik had de beste klik met hem.
-                <img src="IMG_9582.JPG" width="300px" class="middle">
+                <img src="img/IMG_9582.JPG" width="300px" class="middle">
             </p>
         </h1>
     </main>
