--- a/oefenwebsite.html
+++ b/oefenwebsite.html
@@ -17,7 +17,7 @@
         </ul>
     </nav>
     </header>
-        <img src="IMG_2411.jpeg" width="400" class="responsive">
+        <img src="img/IMG_2411.jpeg" width="400" class="responsive">
         <div class="top-left"><h1>Maya's huisdieren</h1></div>
         <h2>Maui en Snoes</h2>
       
@@ -27,7 +27,7 @@
         <h1>
             <p>Welkom op mijn website over mijn huisdieren</p>
         </h1>
-        <img src="IMG_2517.jpeg" width="300px" class="middle"
+        <img src="img/IMG_2517.jpeg" width="300px" class="middle"
 
     </main>
     
