--- a/snoes.html
+++ b/snoes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,22 +10,52 @@
     <header>
     <nav>
         <ul>
-            <li><a href="oefenwebsite.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="Snoes.html">Snoes</a></li>
             <li><a href="Maui.html">Maui</a></li>
-            <li><a href="Over ons.html">Over ons</a></li>
+            <li><a href="overons.html">Over ons</a></li>
         </ul>
     </nav>
     </header>   
     <main>
-        <img src="img/1f17fef6-5531-4525-b8fb-84e72a77a645.jpg" width="400px" class="center">
-        <h1>
-            <p> Dit is Snoes. Snoes is een Europese korthaar en is geboren op 5 april 2023.
-                Vanaf 25 juni 2023 woont Snoes bij ons. Ze is nu een paar maandjes oud en heeft het erg naar haar zin.
+       
+        <img src="img/snoes_beginfoto.jpg" width="400px" class="center">
+        <h1>Snoes</h1>
+            <h2>Dit is Snoes. Snoes is een Europese korthaar en is geboren op 5 april 2023. Vanaf 25 juni 2023 woont Snoes bij ons.
+                Ze is nu een paar maandjes oud en heeft het erg naar haar zin.Snoes is een van de eerste
+                poesjes die we in een lange tijd hebben gehad. Hiervoor hadden we namelijk twee katers. Nu hebben we een poes 
+                en een kater, Snoes en Maui.
                 
-            </p>
-        </h1>
+            </h2>
+        <section class="flex-container">
+            <article>
+                <p>Snoes is een heel ontdeugend poesje. Ze eet van Maui zijn voer, ze gaat op tafel zitten (en andere plekken 
+                    waar het niet mag). Snoes kan ook heel snel rennen. Probeer haar maar is bij te houden.
+                    <img src="img/snoestafel.jpeg" width="300px" class="middle"> 
+                </p>
+            </article>
+            <article>
+                <p>Snoes houd ook heel erg van bij je liggen. Als ik op de bank zit en druk bezig ben op mijn telefoon
+                    komt Snoes op mn schoot springen om bij mij te liggen. Meestal gaat ze dan helemaal naar je
+                    gezicht omdat ze aandacht van je wil. Maar als ze eenmaal bij je ligt is Snoes wel schattig.
+                    <img src="img/snoesopschoot2.JPG" width="200px" class="middle">
+                </p>
+            </article>
+            <article>
+                <p>Snoes vond het in het begin erg spannend bij ons en bij Maui. Maui hebben wij namelijk al best wel lang. 
+                    Voor beide was het even wennen maar ze zijn snel aan elkaar gewend geraakt. 
+                    <ul>
+                        <li><a href="overons.html">Lees hier meer</a></li>
+                    </ul>
+                    over de huisdieren die ik heb gehad.
+                    <img src="img/maui_en_snoes.jpeg" width="350px" class="middle">
+                </p>
+            </article>
+        </section>
     </main>
+    <footer>
+
+    </footer>
 
 </body>
 </html>
