--- a/snoes.html
+++ b/snoes.html
@@ -11,8 +11,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="Snoes.html">Snoes</a></li>
-            <li><a href="Maui.html">Maui</a></li>
+            <li><a href="snoes.html">Snoes</a></li>
+            <li><a href="maui.html">Maui</a></li>
             <li><a href="overons.html">Over ons</a></li>
         </ul>
     </nav>
