--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     Wil je meer te weten komen over Snoes?
                     Klik dan  
                     <ul>
-                        <li><a href="Snoes.html">hier</a></li>
+                        <li><a href="snoes.html">hier</a></li>
                     </ul>
                     <img src="img/05Snoes.jpeg" width="300px" class="middle">
                 </p>
@@ -42,7 +42,7 @@
                      Wil je meer te weten komen over Maui?
                     Klik dan 
                     <ul>
-                        <li><a href="Maui.html">hier</a></li>
+                        <li><a href="maui.html">hier</a></li>
                     </ul> 
                     <img src="img/05maui.JPG" width="300px" class="middle">
                     </p>
