--- a/index.html
+++ b/index.html
@@ -18,34 +18,33 @@
     </nav>
     </header>
     <main>
-            <img src="img/begin_foto.jpeg" width="400" class="responsive">
+            <img src="img/begin_foto.jpeg" alt="Snoes en Maui samen" class="responsive">
         <h1 class="home_page">Maya's huisdieren</h1>
 
-        <h2> Welkom op mijn website over mijn huisdieren. Op deze website laat ik je zien welke huisdieren ik
-            van baby af aan tot nu heb gehad.
-        </h2> 
+        <h2><strong>Welkom op mijn website over mijn huisdieren. Op deze website laat ik je zien welke huisdieren ik
+            van baby af aan tot nu heb gehad.</strong></h2> 
    
         <section class="flex-container">
             <article>
-                <p>Dit is Snoes. Snoes is het nieuwste lid van de familie en moet nog een beetje
-                    haar plek weten. Wat ik wel weet is dat Snoes de schattigste is van de familie.
-                    Wil je meer te weten komen over Snoes?
-                    Klik dan  
-                    <ul>
-                        <li><a href="snoes.html">hier</a></li>
-                    </ul>
-                    <img src="img/05Snoes.jpeg" width="300px" class="middle">
-                </p>
+                <h4>Dit is Snoes.</h4> 
+                    <p>Snoes is het nieuwste lid van de familie en moet nog een beetje
+                        haar plek weten. Wat ik wel weet is dat Snoes de schattigste is van de familie.
+                        Wil je meer te weten komen over Snoes?
+                        Klik dan </p>  
+                        <ul>
+                            <li><a href="snoes.html">hier</a></li>
+                        </ul>
+                        <img src="img/05Snoes.jpeg" alt="Poes genaamd Snoes" class="middle">
             </article>
             <article>
-                    <p>Dit is Maui. Maui is de aardigste kater die je ooit hebt gezien (en de dikste).
-                     Wil je meer te weten komen over Maui?
-                    Klik dan 
-                    <ul>
-                        <li><a href="maui.html">hier</a></li>
-                    </ul> 
-                    <img src="img/05maui.JPG" width="300px" class="middle">
-                    </p>
+                    <h4>Dit is Maui.</h4>
+                        <p>Maui is de aardigste kater die je ooit hebt gezien (en de dikste).
+                        Wil je meer te weten komen over Maui?
+                        Klik dan </p>
+                        <ul>
+                            <li><a href="maui.html">hier</a></li>
+                        </ul> 
+                        <img src="img/05maui.jpg" alt="Kater genaamd Maui" class="middle">
             </article>
         </section>
        
@@ -53,7 +52,7 @@
     </main>
     
     <footer>
-
+ 
     </footer>
 </body>
 </html>
