--- a/snoes.html
+++ b/snoes.html
@@ -18,38 +18,41 @@
     </nav>
     </header>   
     <main>
-       
-        <img src="img/snoes_beginfoto.jpg" width="400px" class="center">
-        <h1>Snoes</h1>
-            <h2>Dit is Snoes. Snoes is een Europese korthaar en is geboren op 5 april 2023. Vanaf 25 juni 2023 woont Snoes bij ons.
+        <img src="img/snoes_beginfoto.jpg" alt="Poes die ligt op de bank"  class="center">
+            <h1>Snoes</h1>
+            <h2><strong>Dit is Snoes. Snoes is een Europese korthaar en is geboren op 5 april 2023. Vanaf 25 juni 2023 woont Snoes bij ons.
                 Ze is nu een paar maandjes oud en heeft het erg naar haar zin.Snoes is een van de eerste
                 poesjes die we in een lange tijd hebben gehad. Hiervoor hadden we namelijk twee katers. Nu hebben we een poes 
-                en een kater, Snoes en Maui.
-                
+                en een kater, Snoes en Maui.</strong>      
             </h2>
         <section class="flex-container">
             <article>
+                <h4>Snoes de ontdeugende poes</h4>
                 <p>Snoes is een heel ontdeugend poesje. Ze eet van Maui zijn voer, ze gaat op tafel zitten (en andere plekken 
                     waar het niet mag). Snoes kan ook heel snel rennen. Probeer haar maar is bij te houden.
-                    <img src="img/snoestafel.jpeg" width="300px" class="middle"> 
                 </p>
+                    <img src="img/snoestafel.jpeg" alt="Poes op een tafel" class="middle">
+
             </article>
             <article>
+                <h4>Knuffel Snoes</h4>
                 <p>Snoes houd ook heel erg van bij je liggen. Als ik op de bank zit en druk bezig ben op mijn telefoon
                     komt Snoes op mn schoot springen om bij mij te liggen. Meestal gaat ze dan helemaal naar je
                     gezicht omdat ze aandacht van je wil. Maar als ze eenmaal bij je ligt is Snoes wel schattig.
-                    <img src="img/snoesopschoot2.JPG" width="200px" class="middle">
                 </p>
+                    <img src="img/snoesopschoot2.jpg" alt="Poes op schoot van haar baasje"  class="middle">
             </article>
             <article>
+                <h4>Snoes en Maui</h4>
                 <p>Snoes vond het in het begin erg spannend bij ons en bij Maui. Maui hebben wij namelijk al best wel lang. 
-                    Voor beide was het even wennen maar ze zijn snel aan elkaar gewend geraakt. 
+                    Voor beide was het even wennen maar ze zijn snel aan elkaar gewend geraakt.
+                </p>
                     <ul>
                         <li><a href="overons.html">Lees hier meer</a></li>
                     </ul>
                     over de huisdieren die ik heb gehad.
-                    <img src="img/maui_en_snoes.jpeg" width="350px" class="middle">
-                </p>
+                    <img src="img/maui_en_snoes.jpeg" alt="Twee katten zie samen op de grond slapen" class="middle">
+                    <img src="img/begin_foto.jpeg" alt="foto van twee katten die liggen in een doos" class="middle">
             </article>
         </section>
     </main>
