--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <ul>
                             <li><a href="maui.html">hier</a></li>
                         </ul> 
-                        <img src="img/05maui.jpg" alt="Kater genaamd Maui" class="middle">
+                        <img src="img/05-maui.JPG" alt="Kater genaamd Maui" class="middle">
             </article>
         </section>
        
