--- a/index.html
+++ b/index.html
@@ -17,42 +17,41 @@
         </ul>
     </nav>
     </header>
-    <main>
-            <img src="img/begin_foto.jpeg" alt="Snoes en Maui samen" class="responsive">
-        <h1 class="home_page">Maya's huisdieren</h1>
+        <main>
+                <img src="img/begin_foto.jpeg" alt="Snoes en Maui samen" class="responsive">
+            <h1 class="homepage_text">Maya's huisdieren</h1>
 
-        <h2><strong>Welkom op mijn website over mijn huisdieren. Op deze website laat ik je zien welke huisdieren ik
-            van baby af aan tot nu heb gehad.</strong></h2> 
-   
-        <section class="flex-container">
-            <article>
-                <h4>Dit is Snoes.</h4> 
-                    <p>Snoes is het nieuwste lid van de familie en moet nog een beetje
-                        haar plek weten. Wat ik wel weet is dat Snoes de schattigste is van de familie.
-                        Wil je meer te weten komen over Snoes?
-                        Klik dan </p>  
-                        <ul>
-                            <li><a href="snoes.html">hier</a></li>
-                        </ul>
-                        <img src="img/05Snoes.jpeg" alt="Poes genaamd Snoes" class="middle">
-            </article>
-            <article>
-                    <h4>Dit is Maui.</h4>
-                        <p>Maui is de aardigste kater die je ooit hebt gezien (en de dikste).
-                        Wil je meer te weten komen over Maui?
-                        Klik dan </p>
-                        <ul>
-                            <li><a href="maui.html">hier</a></li>
-                        </ul> 
-                        <img src="img/05-maui.JPG" alt="Kater genaamd Maui" class="middle">
-            </article>
-        </section>
-       
-
-    </main>
+                <h2><strong>Welkom op mijn website over mijn huisdieren. Op deze website laat ik je zien welke huisdieren ik
+                van baby af aan tot nu heb gehad.</strong></h2> 
     
-    <footer>
- 
-    </footer>
+            <section class="flex-container">
+                <article>
+                    <h4>Dit is Snoes.</h4> 
+                        <p>Snoes is het nieuwste lid van de familie en moet nog een beetje
+                            haar plek weten. Wat ik wel weet is dat Snoes de schattigste is van de familie.
+                            Wil je meer te weten komen over Snoes?
+                            Klik dan </p>  
+                            <ul>
+                                <li><a href="snoes.html">hier</a></li>
+                            </ul>
+                            <img src="img/05Snoes.jpeg" alt="Poes genaamd Snoes" class="middle">
+                </article>
+                <article>
+                        <h4>Dit is Maui.</h4>
+                            <p>Maui is de aardigste kater die je ooit hebt gezien (en de dikste).
+                            Wil je meer te weten komen over Maui?
+                            Klik dan </p>
+                            <ul>
+                                <li><a href="maui.html">hier</a></li>
+                            </ul> 
+                            <img src="img/05-maui.JPG" alt="Kater genaamd Maui" class="middle">
+                </article>
+            </section>
+        </main>
+        <footer>
+            <h2>Volg ons op insta voor meer foto's over deze leuke diertjes!!
+                insta <strong>@maya's.huisdieren</strong>
+                </h2>
+        </footer>
 </body>
 </html>
