--- a/maui.html
+++ b/maui.html
@@ -55,6 +55,7 @@
                 <h2>De beste selfies van Maui:</h2>
             <section class="scroll-images-maui">
                 <article>
+                    <h4>Scroll voor meer selfies van Maui -></h4>
                     <img src="img/selfie_maui1.jpeg" alt="Kat van dichtbij" class="selfies-maui">
                     <img src="img/selfie_maui3.jpeg" alt="Snuit van kat" class="selfies-maui">
                     <img src="img/selfie_maui5.jpeg" alt="Kat die ligt op de stenen" class="selfies-maui">
